
  * Always detect newer tags. (Jelmer Vernooij, #504314)

 FEATURES

  * Support fetching a limited number of revisions. (Michael Hudson)

  * Support 'bzr diff --format=svn'. (Jelmer Vernooij, #555994)
  
  * Warn about broken server when accessing codeplex. (Jelmer Vernooij)

 COMPATIBILITY

  * Drop support for Bazaar < 2.2. (Jelmer Vernooij)

bzr-svn 1.0.2					  2010-01-22

 BUG FIXES

  * Cope with Google code Subversion repositories a bit better in the 
    layout detection code. (Jelmer Vernooij)
  
  * Push tags when pushing to a new repository. (Jelmer Vernooij, #459444)

  * Cope with non-ascii URLs.
   * During connect. (#456548, Jelmer Vernooij)
   * During repository creation. (#458008, Jelmer Vernooij)

  * Cope with non-ascii characters in svn author names. (#460392, 
    Jelmer Vernooij)

  * Fix expected URL in Repository.__repr__ tests that sometimes causes 
    troubles if the temporary directory contains special characters. 
	(John Szakmeister, #460899)

  * Cope with pushing new non-mainline revisions.  (Jelmer Vernooij, #416328)

  * Support probing for Subversion repositories over existing HTTP transports
    using pycurl. (Jelmer Vernooij, #424626)

  * Show Subversion revno and uuid in "bzr version-info". (Jelmer Vernooij,
    #490771)

  * Properly handle invalid Subversion revision numbers. (Jelmer Vernooij,
    #504376)

 PERFORMANCE

  * When updating the log cache, fetch from newest to oldest revision as 
    the Subversion database backends are optimized for this. 
	(John Szakmeister)

  * Fetch history information newest revision to oldest revision because of 
    speed.  (John Szakmeister, #453789)

  * Add extra constraints in sqlite database. (Jelmer Vernooij)

 FEATURES

  * New variant of the 'trunk' layout named 'trunk-variable' that accepts 
    branches with any level of nesting, at some performance cost. 
    (Jelmer Vernooij)


bzr-svn	1.0.1					  2009-10-20

 BUG FIXES
